--- a/languages/belikenow-custom-theme.pot
+++ b/languages/belikenow-custom-theme.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2024-11-27T18:34:47+01:00\n"
+"POT-Creation-Date: 2024-11-28T23:19:57+01:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.11.0\n"
 "X-Domain: belikenow-custom-theme\n"
@@ -17,50 +17,50 @@ msgstr ""
 #. Theme Name of the theme
 #: style.css
 msgid "BeLikeNow Custome Theme"
-msgstr ""
+msgstr "BeLikeNow Custom Theme"
 
 #. Description of the theme
 #: style.css
 msgid "A one-page website I coded from scratch for a local piercing and tattoo studio."
-msgstr ""
+msgstr "A one-page website I coded from scratch for a local piercing and tattoo studio."
 
 #. Author of the theme
 #: style.css
 msgid "LoganDuran"
-msgstr ""
+msgstr "LoganDuran"
 
 #: index.php:68
 msgid "O nama"
-msgstr ""
+msgstr "About Us"
 
 #: index.php:74
 msgid "Nekad zastupljen u plemenskim narodima radi ukazivanja statusa ili religijske simbolike, danas je pirsing izuzetno popularna vrsta bodi arta među mladima i starima ne samo na Zapadu već i širom sveta."
-msgstr ""
+msgstr "Once common among tribal people as a way to signify status or religious symbolism, piercing is now an extremely popular form of body art among people of all ages, not only in the West but worldwide."
 
 #: index.php:84
 msgid "Usluge"
-msgstr ""
+msgstr "Services"
 
 #: index.php:89
 msgid "Studio za pirsing nudi Vam najkvalitetnije usluge pirsinga."
-msgstr ""
+msgstr "The piercing studio offers you the highest quality piercing services."
 
-#: index.php:91
+#: index.php:92
 msgid "Pored samih usluga, takođe nudimo i raznovrsnu paletu nakita za pirsing, isključivo izrađenog od najkvalitetnijeg hirurškog čelika i titanijuma."
-msgstr ""
+msgstr "In addition to services, we also offer a diverse range of piercing jewelry, exclusively made from the highest quality surgical steel and titanium."
 
-#: index.php:101
+#: index.php:102
 msgid "Iskažite svoju individualnost i obeležite nešto Vama važno uz najkvalitetnije pirsinge na raznim delovima tela..."
-msgstr ""
+msgstr "Express your individuality and mark something meaningful to you with the highest quality piercings on various parts of your body..."
 
-#: index.php:104
+#: index.php:105
 msgid "Uz uslugu pirsinga takođe možete odabrati i komad nakita po Vašoj želji, izrađenog od najkvalitetnijeg hirurškog čelika..."
-msgstr ""
+msgstr "With our piercing service, you can also choose a piece of jewelry of your liking, crafted from the highest quality surgical steel..."
 
-#: index.php:115
+#: index.php:116
 msgid "Galerija"
-msgstr ""
+msgstr "Gallery"
 
-#: index.php:184
+#: index.php:185
 msgid "Kontakt"
-msgstr ""
+msgstr "Contact"
